--- a/css/styles.css
+++ b/css/styles.css
@@ -75,14 +75,14 @@ body {
 
 .header.container {
   display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 /* Навигация сайта */
 .nav {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .nav-list {
@@ -118,7 +118,7 @@ body {
   margin-left: auto;
 }
 
-.contacts-item {
+.contacts-item:last-child {
   margin-left: 50px;
 }
 
@@ -153,7 +153,8 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  max-width: 696px;
+  margin: 0 auto 30px;
 }
 .hero-button {
   display: block;
@@ -266,15 +267,19 @@ min-height: 101px;
 .team-item {
   background-color: #ffffff;
   width: 270px;
-  height: 368px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+.team-item-box {
+  padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .team-name {
-  margin-top: 30px;
   margin-bottom: 10px;
   color: var(--primary-text-color);
   font-weight: 500;
@@ -373,13 +378,13 @@ min-height: 101px;
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 .portfolio-list-item {
   flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 .portfolio-item-container {
