--- a/css/styles.css
+++ b/css/styles.css
@@ -382,7 +382,7 @@ min-height: 101px;
   margin-top: -30px;
 }
 .portfolio-list-item {
-  flex-basis: calc(100% / 3 - 30px);
+  flex-basis: calc((100% - 3 * 30px) / 3));
   margin-left: 30px;
   margin-top: 30px;
 }
